Don't truncate the border-spacing before the table-header-group when fragmenting.

BUG=716442

Review-Url: https://codereview.chromium.org/2848883002
Cr-Commit-Position: refs/heads/master@{#468055}

Former-commit-id: ff3fa0df8039326ede8f5f246312e3109836aff3